--- a/etc/rc.conf
+++ b/etc/rc.conf
@@ -1,19 +1,40 @@
 hostname="FreeBSD.cn"
+
+ifconfig_em0="DHCP"
 wlans_iwn0="wlan0"
 ifconfig_wlan0="WPA DHCP"
 sshd_enable="YES"
+
+
 # Set dumpdev to "AUTO" to enable crash dumps, "NO" to disable
+
 dumpdev="AUTO"
-
-
 hald_enable="YES"
 dbus_enable="YES"
 mouse_enable="YES"
-
 
 linux_enable="YES"
 
 nginx_enable="YES"
 php_fpm_enable="YES"
 postgresql_enable="YES"
-ifconfig_em0="DHCP"
+keyrate="fast"
+
+# minidlna_enable="YES"
+# samba_server_enable="YES"
+# dhcpd_enable="YES"
+# dhcpd_ifaces="fxp0"
+
+# mpd_enable="YES"
+# gateway_enable="YES"
+# firewall_enable="YES"
+# firewall_type="OPEN"
+# firewall_script="/etc/ipfw.rules"
+# firewall_logging_enable="YES"
+# natd_enable="YES"
+# natd_interface="wlan0"
+
+# mongod_enable="YES"
+# mongod_dbpath="/home/mongodb"
+# redis_enable="YES"
+
